tests/snapshots/files__loop_hoist-optimize-no-ctx.snap
---
source: tests/files.rs
expression: visualization.result
---
# ARGS: 1 2 3 4
@main(v0: int, v1: int, v2: int, v3: int) {
  v4_: int = id v0;
  v5_: int = id v3;
  v6_: int = id v2;
  v7_: int = id v1;
.b8_:
  v9_: int = sub v6_ v7_;
  v10_: int = mul v6_ v9_;
  print v10_;
  v11_: int = add v10_ v4_;
  v12_: bool = ge v5_ v11_;
  v4_: int = id v11_;
  v13_: int = id v5_;
  v14_: int = id v6_;
  v15_: int = id v7_;
  v5_: int = id v13_;
  v6_: int = id v14_;
  v7_: int = id v15_;
  br v12_ .b8_ .b16_;
.b16_:
  print v4_;
  ret;
}
