tests/snapshots/files__loop_hoist-optimize-sequential.snap
---
source: tests/files.rs
expression: visualization.result
---
# ARGS: 1 2 3 4
@main(v0: int, v1: int, v2: int, v3: int) {
  v4_: int = sub v2 v1;
  v5_: int = mul v2 v4_;
  v6_: int = id v0;
  v7_: int = id v3;
  v8_: int = id v2;
  v9_: int = id v1;
  v10_: int = id v5_;
.b11_:
  print v10_;
  v12_: int = add v10_ v6_;
  v13_: bool = ge v7_ v12_;
  v6_: int = id v12_;
  v14_: int = id v7_;
  v15_: int = id v8_;
  v16_: int = id v9_;
  v17_: int = id v10_;
  v7_: int = id v14_;
  v8_: int = id v15_;
  v9_: int = id v16_;
  v10_: int = id v17_;
  br v13_ .b11_ .b18_;
.b18_:
  print v6_;
  ret;
}
