tests/snapshots/files__loop_if-optimize-sequential.snap
---
source: tests/files.rs
expression: visualization.result
---
# ARGS: 
@main {
.b0_:
  c1_: int = const 0;
  v2_: int = id c1_;
  v3_: int = id c1_;
.b4_:
  v5_: bool = eq v2_ v3_;
  c6_: int = const 1;
  v7_: int = add c6_ v2_;
  v8_: int = select v5_ v2_ v7_;
  v9_: int = add c6_ v3_;
  v10_: int = select v5_ v3_ v9_;
  v11_: bool = not v5_;
  v2_: int = id v8_;
  v3_: int = id v10_;
  br v11_ .b4_ .b12_;
.b12_:
  print v2_;
  ret;
}
