tests/snapshots/files__loop_invariant_code_motion-optimize-no-ctx.snap
---
source: tests/files.rs
expression: visualization.result
---
# ARGS: 30 10
@main(v0: int, v1: int) {
  c2_: int = const 0;
  c3_: int = const 1;
  c4_: int = const 20;
  v5_: int = id c2_;
  v6_: int = id c3_;
  v7_: int = id v1;
  v8_: int = id v0;
  v9_: int = id c4_;
.b10_:
  v11_: int = mul v8_ v9_;
  v12_: bool = lt v11_ v7_;
  v13_: int = id v5_;
  v14_: int = id v6_;
  v15_: int = id v11_;
  v16_: int = id v7_;
  v17_: int = id v8_;
  v18_: int = id v9_;
  br v12_ .b19_ .b20_;
.b19_:
  v21_: int = add v11_ v6_;
  v13_: int = id v5_;
  v14_: int = id v6_;
  v15_: int = id v21_;
  v16_: int = id v7_;
  v17_: int = id v8_;
  v18_: int = id v9_;
.b20_:
  v22_: int = mul v15_ v5_;
  print v22_;
  v23_: int = add v5_ v6_;
  v24_: bool = lt v23_ v9_;
  v5_: int = id v23_;
  v25_: int = id v6_;
  v26_: int = id v7_;
  v27_: int = id v8_;
  v28_: int = id v9_;
  v6_: int = id v25_;
  v7_: int = id v26_;
  v8_: int = id v27_;
  v9_: int = id v28_;
  br v24_ .b10_ .b29_;
.b29_:
  ret;
}
