tests/snapshots/files__loop_invariant_code_motion-optimize.snap
---
source: tests/files.rs
expression: visualization.result
---
# ARGS: 30 10
@main(v0: int, v1: int) {
  c2_: int = const 0;
  c3_: int = const 1;
  c4_: int = const 20;
  v5_: int = mul c4_ v0;
  v6_: bool = lt v5_ v1;
  v7_: int = id c3_;
  v8_: int = id c3_;
  v9_: int = id v5_;
  v10_: int = id v1;
  v11_: int = id v0;
  v12_: int = id c4_;
  br v6_ .b13_ .b14_;
.b13_:
  v15_: int = add c3_ v5_;
  v7_: int = id c3_;
  v8_: int = id c3_;
  v9_: int = id v15_;
  v10_: int = id v1;
  v11_: int = id v0;
  v12_: int = id c4_;
  v16_: int = id c2_;
  v17_: int = id c3_;
  v18_: int = id v1;
  v19_: int = id v0;
  v20_: int = id c4_;
  v21_: int = id v9_;
.b22_:
  v23_: int = add v16_ v17_;
  v24_: int = add v17_ v23_;
  v25_: int = add v17_ v24_;
  v26_: int = mul v21_ v25_;
  v27_: int = mul v21_ v24_;
  v28_: int = mul v21_ v23_;
  v29_: int = mul v16_ v21_;
  print v29_;
  print v28_;
  print v27_;
  print v26_;
  v30_: int = add v17_ v25_;
  v31_: bool = lt v30_ v20_;
  v16_: int = id v30_;
  v32_: int = id v17_;
  v33_: int = id v18_;
  v34_: int = id v19_;
  v35_: int = id v20_;
  v36_: int = id v21_;
  v17_: int = id v32_;
  v18_: int = id v33_;
  v19_: int = id v34_;
  v20_: int = id v35_;
  v21_: int = id v36_;
  br v31_ .b22_ .b37_;
.b14_:
  v16_: int = id c2_;
  v17_: int = id c3_;
  v18_: int = id v1;
  v19_: int = id v0;
  v20_: int = id c4_;
  v21_: int = id v9_;
  jmp .b22_;
.b37_:
  ret;
}
